--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "gatsby": "^3.13.1",
-    "gatsby-plugin-image": "^1.14.0",
-    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby": "^3.14.3",
+    "gatsby-plugin-image": "^1.14.1",
+    "gatsby-plugin-sharp": "^3.14.1",
     "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-source-wordpress": "^5.14.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "sharp": "^0.29.1"
   }
 }
