--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.3",
     "gatsby": "^3.14.3",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.1",
+    "gatsby-plugin-styled-components": "^5.0.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-wordpress": "^5.14.1",
     "gatsby-transformer-sharp": "^3.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "styled-components": "^5.3.3"
   }
 }
