--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.3",
-    "gatsby": "^3.14.3",
+    "gatsby": "^3.0.0-next.0",
     "gatsby-plugin-image": "^1.14.1",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
@@ -25,9 +25,11 @@
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-source-wordpress": "^5.14.1",
     "gatsby-transformer-sharp": "^3.14.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "node-fetch": "^2.6.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "rumble-charts": "^4.0.0",
     "sharp": "^0.29.1",
     "styled-components": "^5.3.3"
   }
